--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="static/css/app.css">
 </head>
 
-<body>
+<body data-theme="light">
     <section>
         <h2 class="title">Random Quote or Joke - Java Script</h2>
         <div class="container">
@@ -17,6 +17,10 @@
                 <p></p>
             </div>
             <button>Get a Joke</button>
+        </div>
+        <div class="theme-switcher">
+            <input type="checkbox" name="swtich" id="toggle_switch">
+            <label for="toggle_switch">Switch</label>
         </div>
 
         <div class="container">
